[package]
name = "asyncrouter"
version = "0.1.0"
authors = ["Bobby R. Ward <bobbyrward@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-log = { version="0.1.1", features=["env_logger"]}

log = "0.4"
env_logger = "0.6"

anyhow = "1.0"

tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

tower = "0.3.1"
